# flink-streaming-product-category-recommendation

./: .gitignore  README.md  README_es.md  pyproject.toml
flink_pipeline/: build.sbt
flink_pipeline/src/main/scala/es/uimp/bigdata/flink/: RecommendationJob.scala
model_training/: classification_report_xgboost.txt  train.py
model_training/model/: classification_report_randomforest.txt
scripts/: install_flink_1-20-0.sh  run_pipeline.sh
